@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-17T16:07:58Z",
-  "count" : 11,
-  "count_minmax" : [ 6, 11 ],
-  "count_decinc" : [ -0, +11 ],
-  "uniques" : 2,
+  "timestamp" : "2023-08-31T08:09:05Z",
+  "count" : 5,
+  "count_minmax" : [ 5, 11 ],
+  "count_decinc" : [ -6, +11 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
