@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-08-30T16:08:06Z",
+  "timestamp" : "2023-08-31T08:09:05Z",
   "count_outdated" : 1553,
   "uniques_outdated" : 562,
-  "count" : 1647,
-  "uniques" : 582,
+  "count" : 1668,
+  "uniques" : 583,
   "views" : [
     {
       "timestamp": "2023-08-17T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 6, 11 ],
-      "count_decinc": [ 0, 11 ],
-      "uniques": 2,
+      "count": 5,
+      "count_minmax": [ 5, 11 ],
+      "count_decinc": [ 6, 11 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-08-18T00:00:00Z",
@@ -109,6 +109,15 @@
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-31T00:00:00Z",
+      "count": 21,
+      "count_minmax": [ 21, 21 ],
+      "count_decinc": [ 0, 21 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
