@@ -1,11 +1,11 @@
 {
-  "count": 94,
+  "count": 109,
   "uniques": 20,
   "views": [
     {
       "timestamp": "2023-08-17T00:00:00Z",
-      "count": 11,
-      "uniques": 2
+      "count": 5,
+      "uniques": 1
     },
     {
       "timestamp": "2023-08-18T00:00:00Z",
@@ -60,6 +60,11 @@
     {
       "timestamp": "2023-08-30T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-31T00:00:00Z",
+      "count": 21,
       "uniques": 1
     }
   ]
